# BlueTest

./: README.md  meson.build  org.gnome.Example.json
data/: org.gnome.Example.desktop.in  org.gnome.Example.gschema.xml  org.gnome.Example.metainfo.xml.in  org.gnome.Example.service.in
data/ui/: main_window.blp
po/: meson.build
src/: application.vala  bluetest.gresource.xml  main.vala  meson.build  window.ui  window.vala
